--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,15 +1,17 @@
 
 /* Navigation Bar Styles */
 nav {
-  height: 120px;
-  width: 100%;
-  background-color: #4056A1;
-  color: #FFFFFF;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 1.5em;
+  background-color: #4056A1;
+  color: #FFFFFF;
+  height: 120px;
+  width: 100%;
+  padding-left: 1.5em;
+  padding-right: 1.5em;
   box-sizing: border-box;
+  position: fixed;
   font-family: 'Bungee', sans-serif;
   top: 0;
 }
